2012-03-26  Corinna Vinschen  <corinna@vinschen.de>

	* hires.h (hires_ms::dmsecs): Drop unused method.
	* times.cc (JITTER): Remove.
	(gtod): Revert to process-local variable.
	(hires_ms::nsecs): Just return system time to disallow discrepancy with
	the OS.
	(hires_ms::resolution): Return coarsest timer value from OS.  Add
	comment to explain why.
	(clock_setres): Ditto.

2012-03-21  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* child_info.h: Reset magic number.

2012-03-21  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* child_info.h (child_info::postfork): Define new function.
	* fork.cc (frok::parent): Call postfork to do all of the manipulation
	required prior to calling pinfo::remember.
	* pinfo.h (pinfo::set_rd_proc_pipe): Just set pinfo's rd_proc_pipe.
	Don't bother setting it to NULL.
	* sigproc.cc (child_info_spawn::wait_for_myself): Call postfork to set
	up myself for waiting.
	* spawn.cc (child_info_spawn::worker): Avoid now-unnecessary global
	lock.  Consistently test mode rather than chtype when making
	wr_proc_pipe decisions.  Call postfork() to set up stuff prior to
	pinfo::remember.

2012-03-21  Corinna Vinschen  <corinna@vinschen.de>

	* cygtls.cc (well_known_dlls): Add advapi32.dll.

2012-03-21  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* child_info.h: Reset magic number.
	(child_info_spawn::wait_for_myself): Move function to sigproc.cc.
	* pinfo.cc (is_toplevel_proc): Delete unneeded variable.
	* sigproc.cc (child_info_spawn::wait_for_myself): Move function from
	header to here.  Do all setup required to properly wait for top-level
	execed process to exit.
	* spawn.cc (child_info_spawn::worker): Attempt to properly handle
	_P_DETACH.  Set wr_proc_pipe if top-level process even when execing.
	Just call wait_for_myself() to...  wait for myself.  Don't call cleanup
	twice.

2012-03-21  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* pinfo.cc (proc_waiter): Remove debugging.

2012-03-20  Christopher Faylor  <me.cygwin2012@cgf.cx>
